# preonmath

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/preon_math/: basics.h  cast.h  compile_helper.h  convert_bullet.h  convert_eigen.h  convert_imath.h  euler.h  euler_fwd.h  initializers.h  math_misc.h  math_utils.h  matrix.h  matrix.inl  matrix11.h  matrix22.h  matrix33.h  matrix44.h  matrix_fwd.h  matrix_simd.h  matrix_util.h  matrix_utils.h  quat.h  quat_fwd.h  rotation_utils.h  scalar_avx.h  scalar_simd.h  scalar_sse.h  scalar_wrapper.h  scalar_wrapper_std.h  simd_scalar_wrapper.h  simd_scalar_wrapper_definitions.h  simd_scalar_wrapper_std.h  simd_wrapper.h  static_for.h  symmetric_matrix33.h  symmetric_matrix33_fwd.h  traits.h  vec.h  vec2.h  vec3.h  (+5 more)
test/: CMakeLists.txt  main.cpp  test_math_utils.cpp  test_vec2.cpp
